--- a/bgp/rib-spi/pom.xml
+++ b/bgp/rib-spi/pom.xml
@@ -34,6 +34,12 @@
             <artifactId>sal-binding-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>yang-binding</artifactId>
+            <version>0.6.0-SNAPSHOT</version>
+        </dependency>
+        
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
