Fix segment routing packaging
Change-Id: Ia787c1fbe5512610a949c2a5957fc3ab4fce93e9
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/topology/segment-routing/pom.xml
+++ b/topology/segment-routing/pom.xml
@@ -81,8 +81,8 @@
                    <instructions>
                        <Bundle-Name>${project.groupId}.${project.artifactId}</Bundle-Name>
                        <Export-Package>
-                           org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.topology.sr.rev130819,
-                           org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.topology.tunnel.sr.rev130819,
+                           org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.topology.sr.rev130819.*,
+                           org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.topology.tunnel.sr.rev130819.*,
                        </Export-Package>
                    </instructions>
                </configuration>
