BUG-108: initial topology provider structure
Change-Id: Ibdd9f1fe3fb1e103ca0f996254215c1853e821b8
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/topology/pom.xml
+++ b/topology/pom.xml
@@ -17,7 +17,8 @@
 	<name>${project.artifactId}</name>
 	
 	<modules>
-		<module>api</module>
+        <module>api</module>
+        <module>provider-bgp</module>
 		<module>tunnel-api</module>
         <module>tunnel-pcep</module>
         <module>segment-routing</module>
