BUG-108: create Ipv4/Ipv6/Linkstate builders
Change-Id: I32974e095dd3ff693085b6adf04440f7edaa5c67
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/topology/provider-bgp/pom.xml
+++ b/topology/provider-bgp/pom.xml
@@ -26,6 +26,11 @@
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
+			<artifactId>bgp-linkstate</artifactId>
+            <version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>topology-api</artifactId>
             <version>${project.version}</version>
 		</dependency>
