--- a/bgp/concepts/pom.xml
+++ b/bgp/concepts/pom.xml
@@ -36,7 +36,7 @@
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>yang-binding</artifactId>
-            <version>${code.generator.version}</version>
+            <version>${yang.binding.version}</version>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
@@ -87,7 +87,7 @@
                    <dependency>
                        <groupId>org.opendaylight.yangtools</groupId>
                        <artifactId>maven-sal-api-gen-plugin</artifactId>
-                       <version>${code.generator.version}</version>
+                       <version>${yang.binding.version}</version>
                        <type>jar</type>
                    </dependency>
                </dependencies>
