--- a/bgp/parser-api/pom.xml
+++ b/bgp/parser-api/pom.xml
@@ -49,6 +49,18 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>${slf4j.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>yang-binding</artifactId>
+            <version>${yang.binding.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>yang-common</artifactId>
+            <version>${yangtools.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.opendaylight.yangtools.model</groupId>
             <artifactId>ietf-inet-types</artifactId>
@@ -87,7 +99,7 @@
                     <dependency>
                         <groupId>org.opendaylight.yangtools</groupId>
                         <artifactId>maven-sal-api-gen-plugin</artifactId>
-                        <version>${code.generator.version}</version>
+                        <version>${yang.binding.version}</version>
                         <type>jar</type>
                     </dependency>
                 </dependencies>
