--- a/bgp/rib-spi/pom.xml
+++ b/bgp/rib-spi/pom.xml
@@ -37,7 +37,7 @@
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>yang-binding</artifactId>
-            <version>${code.generator.version}</version>
+            <version>${yang.binding.version}</version>
         </dependency>
         
 		<dependency>
