--- a/concepts/pom.xml
+++ b/concepts/pom.xml
@@ -41,7 +41,7 @@
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>yang-binding</artifactId>
-            <version>${yangtools.version}</version>
+            <version>${yang.binding.version}</version>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
@@ -92,7 +92,7 @@
                    <dependency>
                        <groupId>org.opendaylight.yangtools</groupId>
                        <artifactId>maven-sal-api-gen-plugin</artifactId>
-                       <version>${code.generator.version}</version>
+                       <version>${yang.binding.version}</version>
                        <type>jar</type>
                    </dependency>
                </dependencies>
