--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -53,7 +53,7 @@
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>yang-binding</artifactId>
-            <version>${code.generator.version}</version>
+            <version>${yang.binding.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
