--- a/pcep/api/pom.xml
+++ b/pcep/api/pom.xml
@@ -63,7 +63,7 @@
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>yang-binding</artifactId>
-            <version>${code.generator.version}</version>
+            <version>${yang.binding.version}</version>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
@@ -120,7 +120,7 @@
                    <dependency>
                        <groupId>org.opendaylight.yangtools</groupId>
                        <artifactId>maven-sal-api-gen-plugin</artifactId>
-                       <version>${code.generator.version}</version>
+                       <version>${yang.binding.version}</version>
                        <type>jar</type>
                    </dependency>
                </dependencies>
