BUG-47: label model
Change-Id: I7768eda3967f12526be2817fbc9f68e7efc84824
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -62,6 +62,12 @@
             <version>${yangtools.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.opendaylight.yangtools.thirdparty</groupId>
+            <artifactId>xtend-lib-osgi</artifactId>
+            <version>2.4.3</version>
+            <scope>test</scope>
+        </dependency>
 
 		<dependency>
 			<groupId>com.google.guava</groupId>
