Split RSVP model out for reuse in bgp-linkstate
Change-Id: I95261b961e419dd1a49651baf14c4ba6fcb75d9c
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
 		<module>integration-tests</module>
 		<module>mockito-configuration</module>
 		<module>pcep</module>
+		<module>rsvp</module>
 		<module>util</module>
 	</modules>
 
