--- a/bgp/parser-spi/pom.xml
+++ b/bgp/parser-spi/pom.xml
@@ -54,6 +54,12 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>${slf4j.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>org.osgi.core</artifactId>
+            <version>${osgi.version}</version>
+            <scope>provided</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
