--- a/bgp/parser-spi/pom.xml
+++ b/bgp/parser-spi/pom.xml
@@ -68,7 +68,11 @@
 						<Bundle-Name>${project.groupId}.${project.artifactId}</Bundle-Name>
 						<Export-Package>
                             org.opendaylight.protocol.bgp.parser.spi,
-						</Export-Package>
+                            org.opendaylight.protocol.bgp.parser.spi.osgi,
+                        </Export-Package>
+                        <Private-Package>
+                            org.opendaylight.protocol.bgp.parser.spi.pojo,
+                        </Private-Package>
 					</instructions>
 				</configuration>
 			</plugin>
