--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 		<logback.version>1.0.7</logback.version>
 		<maven.bundle.version>2.4.0</maven.bundle.version>
 		<maven.compiler.version>3.1</maven.compiler.version>
+		<maven.jar.version>2.4</maven.jar.version>
 		<maven.shade.version>2.1</maven.shade.version>
 		<mockito.version>1.9.5</mockito.version>
 		<netty.version>4.0.9.Final</netty.version>
