BUG-113: convert PCEP to use activators
Change-Id: If0dcf681de77fc3a991a8ff14cab692ec8214fe2
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/bgp/parser-impl/pom.xml
+++ b/bgp/parser-impl/pom.xml
@@ -113,7 +113,7 @@
 						<Export-Package>
 							org.opendaylight.protocol.bgp.parser.impl.*
 						</Export-Package>
-                        <Activator>org.opendaylight.protocol.bgp.parser.impl.OSGiActivator</Activator>
+                        <Activator>org.opendaylight.protocol.bgp.parser.impl.BundleActivator</Activator>
 					</instructions>
 				</configuration>
 			</plugin>
