--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -39,6 +39,43 @@
         </dependency>
 
         <dependency>
+			<groupId>${project.groupId}</groupId>
+            <artifactId>programming-api</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+			<groupId>${project.groupId}</groupId>
+            <artifactId>programming-tunnel-api</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+			<groupId>${project.groupId}</groupId>
+            <artifactId>topology-api</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+			<groupId>${project.groupId}</groupId>
+            <artifactId>topology-segment-routing</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+			<groupId>${project.groupId}</groupId>
+            <artifactId>topology-tunnel-api</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+			<groupId>${project.groupId}</groupId>
+            <artifactId>topology-tunnel-pcep</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.opendaylight.controller</groupId>
             <artifactId>sal-binding-broker-impl</artifactId>
             <version>1.0-SNAPSHOT</version>
