Fix junit dependencies in poms. Reuse existing from parent, add missing ones.
Change-Id: Ie40ee5b254adfe3148d6af9d6f141b152b728cd7
Signed-off-by: Alissa Bonas <abonas@redhat.com>

--- a/bgp/concepts/pom.xml
+++ b/bgp/concepts/pom.xml
@@ -54,6 +54,10 @@
             <artifactId>ietf-inet-types</artifactId>
             <version>${ietf.types.version}</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
 	</dependencies>
 
 	<build>
