--- a/bgp/parser-mock/pom.xml
+++ b/bgp/parser-mock/pom.xml
@@ -66,6 +66,10 @@
             <version>2010.09.24-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
 	</dependencies>
 
 	<build>
