--- a/util/pom.xml
+++ b/util/pom.xml
@@ -29,6 +29,10 @@
 			<artifactId>commons-codec</artifactId>
 			<version>${commonscodec.version}</version>
 		</dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
     </dependencies>
 
 	<build>
