--- a/bgp/linkstate/pom.xml
+++ b/bgp/linkstate/pom.xml
@@ -76,6 +76,10 @@
             <version>${osgi.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+         </dependency>
 	</dependencies>
 
 	<build>
