--- a/pcep/testtool/pom.xml
+++ b/pcep/testtool/pom.xml
@@ -65,6 +65,10 @@
 			<version>${logback.version}</version>
 			<scope>runtime</scope>
 		</dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
 	</dependencies>
 
 	<build>
