--- a/topology/pom.xml
+++ b/topology/pom.xml
@@ -18,7 +18,9 @@
 	
 	<modules>
         <module>api</module>
+        <module>pcep-api</module>
         <module>provider-bgp</module>
+        <module>provider-pcep</module>
 		<module>tunnel-api</module>
         <module>tunnel-pcep</module>
         <module>segment-routing</module>
