--- a/topology/tunnel-pcep/pom.xml
+++ b/topology/tunnel-pcep/pom.xml
@@ -30,6 +30,11 @@
             <version>${project.version}</version>
 		</dependency>
         <dependency>
+            <groupId>org.opendaylight.controller</groupId>
+            <artifactId>sal-binding-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>yang-binding</artifactId>
             <version>${yang.binding.version}</version>
@@ -38,6 +43,12 @@
             <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>yang-common</artifactId>
             <version>${yangtools.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.opendaylight.controller.model</groupId>
+            <artifactId>model-inventory</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
 	</dependencies>
 
@@ -86,8 +97,13 @@
                    <instructions>
                        <Bundle-Name>${project.groupId}.${project.artifactId}</Bundle-Name>
                        <Export-Package>
+                           org.opendaylight.yang.gen.v1.urn.opendaylight.inventory.pcep.rev131024,
+                           org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.topology.pcep.rev131024,
                            org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.topology.tunnel.pcep.rev130820,
                        </Export-Package>
+                       <Private-Package>
+                           org.opendaylight.protocol.tunnel.pcep,
+                       </Private-Package>
                    </instructions>
                </configuration>
            </plugin>
