BUG-109: move tunnel API to its appropriate place
Change-Id: I1e102d4b09f8eabcbd1f0f99d4bd41f228aaa996
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/topology/pom.xml
+++ b/topology/pom.xml
@@ -22,7 +22,7 @@
         <module>provider-bgp</module>
         <module>provider-pcep</module>
 		<module>tunnel-api</module>
-        <module>tunnel-pcep</module>
+        <module>tunnel-pcep-api</module>
         <module>segment-routing</module>
     </modules>
 </project>
