BUG-109: fix model and introduce provider
Change-Id: I699a75d9ce4ef8a390eea6aedd22eae3390751a7
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/topology/pom.xml
+++ b/topology/pom.xml
@@ -23,6 +23,7 @@
         <module>provider-pcep</module>
 		<module>tunnel-api</module>
         <module>tunnel-pcep-api</module>
+        <module>tunnel-provider-pcep</module>
         <module>segment-routing</module>
     </modules>
 </project>
