--- a/topology/tunnel-pcep-api/pom.xml
+++ b/topology/tunnel-pcep-api/pom.xml
@@ -86,7 +86,7 @@
                    <instructions>
                        <Bundle-Name>${project.groupId}.${project.artifactId}</Bundle-Name>
                        <Export-Package>
-                           org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.topology.tunnel.pcep.rev130820,
+                           org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.topology.tunnel.pcep.rev130820.*,
                        </Export-Package>
                    </instructions>
                </configuration>
