--- a/programming/pom.xml
+++ b/programming/pom.xml
@@ -17,7 +17,8 @@
 	<name>${project.artifactId}</name>
 	
 	<modules>
-		<module>api</module>
+        <module>api</module>
+        <module>impl</module>
 		<module>tunnel-api</module>
     </modules>
 </project>
