WIP: BUG-48: introduce programming implemenentation
Change-Id: I656f02f96df013d2dc0133c133247e5d535a99fd
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/programming/pom.xml
+++ b/programming/pom.xml
@@ -17,7 +17,9 @@
 	<name>${project.artifactId}</name>
 	
 	<modules>
-		<module>api</module>
+        <module>api</module>
+        <module>impl</module>
+        <module>spi</module>
 		<module>tunnel-api</module>
     </modules>
 </project>
