BUG-48: next phase of implementation
Trim down tunnel programming instructions
Introduce PCEP APIs
Introduce PCEP provider
Add tunnel SPI helper
Remove dependency on Inventory

Change-Id: I459f70780b90a80371b91f49802015ea2c252458
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/pcep/pom.xml
+++ b/pcep/pom.xml
@@ -21,5 +21,9 @@
 		<module>impl</module>
 		<module>spi</module>
         <module>testtool</module>
+        <module>topology-api</module>
+        <module>topology-provider</module>
+        <module>tunnel-api</module>
+        <module>tunnel-provider</module>
     </modules>
 </project>
