--- a/pcep/tunnel-api/pom.xml
+++ b/pcep/tunnel-api/pom.xml
@@ -5,13 +5,13 @@
 
 	<parent>
 		<groupId>org.opendaylight.bgpcep</groupId>
-		<artifactId>programming-parent</artifactId>
+		<artifactId>pcep-parent</artifactId>
 		<version>0.3.0-SNAPSHOT</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>programming-tunnel-api</artifactId>
-	<description>Tunnel Programming API</description>
+	<artifactId>pcep-tunnel-api</artifactId>
+	<description>Tunnel API for PCEP</description>
 	<packaging>bundle</packaging>
 	<name>${project.artifactId}</name>
 	<prerequisites>
@@ -21,7 +21,12 @@
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>programming-topology-api</artifactId>
+			<artifactId>programming-api</artifactId>
+            <version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>programming-tunnel-api</artifactId>
             <version>${project.version}</version>
 		</dependency>
 		<dependency>
@@ -32,6 +37,11 @@
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>topology-tunnel-api</artifactId>
+            <version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>pcep-api</artifactId>
             <version>${project.version}</version>
 		</dependency>
         <dependency>
@@ -102,7 +112,7 @@
 	<distributionManagement>
 		<site>
 			<id>${project.artifactId}</id>
-			<name>PROGRAMMING-TUNNEL-API Module site</name>
+			<name>PROGRAMMING-TUNNEL-PCEP-API Module site</name>
 			<url>${basedir}/target/site/${project.artifactId}</url>
 		</site>
 	</distributionManagement>
