Added configuration modules and services for BGP. Genearted from yang modules definition using yang-maven-plugin and yang-jmx-generator-plugin.
Change-Id: Idae89c6f9b0873b5007561b0fd48914be1879556
Signed-off-by: Milos Fabian <milfabia@cisco.com>

--- a/bgp/pom.xml
+++ b/bgp/pom.xml
@@ -27,5 +27,8 @@
         <module>testtool</module>
         <module>rib-mock</module>
         <module>util</module>
-    </modules>
+        <module>rib-api-config</module>
+        <module>rib-impl-config</module>
+        <module>update-api-config</module>
+	</modules>
 </project>
