BUG-48: create NanotimeUtil
Change-Id: I3cdc7266017c2ecdf6b35816a6cb9e675853ae75
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/programming/api/pom.xml
+++ b/programming/api/pom.xml
@@ -81,6 +81,7 @@
                    <instructions>
                        <Bundle-Name>${project.groupId}.${project.artifactId}</Bundle-Name>
                        <Export-Package>
+                           org.opendaylight.bgpcep.programming,
                            org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.programming.rev130930.*,
                        </Export-Package>
                    </instructions>
