BUG-48: Tunnel integration, part 1
Change-Id: Ib55a9b65dd0d6d535b6e5590b7b02ef355f5ae4f
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/pcep/pom.xml
+++ b/pcep/pom.xml
@@ -23,6 +23,7 @@
         <module>testtool</module>
         <module>topology-api</module>
         <module>topology-provider</module>
+        <module>topology-spi</module>
         <module>tunnel-api</module>
         <module>tunnel-provider</module>
     </modules>
