--- a/pcep/topology-spi/pom.xml
+++ b/pcep/topology-spi/pom.xml
@@ -10,8 +10,8 @@
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>pcep-tunnel-provider</artifactId>
-	<description>PCEP Tunnel Topology Provider</description>
+	<artifactId>pcep-topology-spi</artifactId>
+	<description>PCEP Topology SPI</description>
 	<packaging>bundle</packaging>
 	<name>${project.artifactId}</name>
 	<prerequisites>
@@ -21,7 +21,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>programming-spi</artifactId>
+			<artifactId>pcep-api</artifactId>
             <version>${project.version}</version>
 		</dependency>
 		<dependency>
@@ -31,7 +31,12 @@
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>topology-tunnel-api</artifactId>
+			<artifactId>programming-api</artifactId>
+            <version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>programming-spi</artifactId>
             <version>${project.version}</version>
 		</dependency>
 		<dependency>
@@ -39,21 +44,6 @@
 			<artifactId>pcep-topology-api</artifactId>
             <version>${project.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>pcep-topology-spi</artifactId>
-            <version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>pcep-tunnel-api</artifactId>
-            <version>${project.version}</version>
-		</dependency>
-        <dependency>
-            <groupId>org.opendaylight.controller</groupId>
-            <artifactId>sal-binding-api</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
@@ -65,6 +55,18 @@
             <version>${project.version}</version>
 			<scope>test</scope>
         </dependency>
+
+        <!-- FIXME: integrate with config to get rid of this -->
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>pcep-impl</artifactId>
+            <version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>pcep-spi</artifactId>
+            <version>${project.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -77,10 +79,9 @@
                <configuration>
                    <instructions>
                        <Bundle-Name>${project.groupId}.${project.artifactId}</Bundle-Name>
-                       <Private-Package>
-                           org.opendaylight.bgpcep.pcep.tunnel.provider
-                       </Private-Package>
-                       <Bundle-Activator>org.opendaylight.bgpcep.pcep.tunnel.provider.BundleActivator</Bundle-Activator>
+                       <Export-Package>
+                           org.opendaylight.bgpcep.pcep.topology.spi
+                       </Export-Package>
                    </instructions>
                </configuration>
            </plugin>
@@ -90,7 +91,7 @@
 	<distributionManagement>
 		<site>
 			<id>${project.artifactId}</id>
-			<name>PCEP-TUNNEL-PROVIDER Module site</name>
+			<name>PCEP-TOPOLOGY-SPI Module site</name>
 			<url>${basedir}/target/site/${project.artifactId}</url>
 		</site>
 	</distributionManagement>
