Fixes: added source to  build-helper-maven-plugin, changed package naming to be more human-readable, fixed poms formatting.
Change-Id: I7e7cec276c010a5b650b57a82732ed57bce4bb49
Signed-off-by: Milos Fabian <milfabia@cisco.com>

--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,7 @@
                         <configuration>
                             <sources>
                                 <source>target/generated-sources/sal</source>
+                                <source>target/generated-sources/config</source>
                             </sources>
                         </configuration>
                     </execution>
