WIP: more model work
Change-Id: Id416489bfb61b4c8f9975403a19278faa8050eeb
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/topology/pom.xml
+++ b/topology/pom.xml
@@ -20,6 +20,6 @@
         <module>api</module>
         <module>provider-bgp</module>
 		<module>tunnel-api</module>
-        <module>segment-routing</module>
+        <!--module>segment-routing</module-->
     </modules>
 </project>
