--- a/bgp/pom.xml
+++ b/bgp/pom.xml
@@ -28,7 +28,8 @@
         <module>rib-mock</module>
         <module>util</module>
         <module>rib-api-config</module>
-        <module>rib-impl-config</module>
         <module>update-api-config</module>
+        <module>rib-impl-config</module>
+        <module>update-mock-config</module>
 	</modules>
 </project>
