--- a/bgp/rib-impl-config/pom.xml
+++ b/bgp/rib-impl-config/pom.xml
@@ -44,7 +44,7 @@
       <dependency>
          <groupId>org.opendaylight.controller</groupId>
          <artifactId>config-api</artifactId>
-         <version>0.2.1-SNAPSHOT</version>
+         <version>${controller.config.version}</version>
       </dependency>
    </dependencies>
 
@@ -81,7 +81,7 @@
                <dependency>
                   <groupId>org.opendaylight.controller</groupId>
                   <artifactId>yang-jmx-generator-plugin</artifactId>
-                  <version>0.2.1-SNAPSHOT</version>
+                  <version>${controller.config.version}</version>
                </dependency>
             </dependencies>
          </plugin>
