BUG-108: add IPv4/IPv6 topology builders
Change-Id: I83820392a9ad280bc329c38af992215c05a48f22
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/bgp/pom.xml
+++ b/bgp/pom.xml
@@ -28,6 +28,7 @@
         <module>rib-impl</module>
         <module>testtool</module>
         <module>rib-mock</module>
+        <module>topology-provider</module>
         <module>util</module>
     </modules>
 </project>
