--- a/bgp/topology-provider/pom.xml
+++ b/bgp/topology-provider/pom.xml
@@ -5,12 +5,12 @@
 
 	<parent>
 		<groupId>org.opendaylight.bgpcep</groupId>
-		<artifactId>topology-parent</artifactId>
+		<artifactId>bgp-parent</artifactId>
 		<version>0.3.0-SNAPSHOT</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>topology-provider-bgp</artifactId>
+	<artifactId>bgp-topology-provider</artifactId>
 	<description>BGP Topology Provider</description>
 	<packaging>bundle</packaging>
 	<name>${project.artifactId}</name>
@@ -78,7 +78,7 @@
 	<distributionManagement>
 		<site>
 			<id>${project.artifactId}</id>
-			<name>TOPOLOGY-PROVIDER-BGP Module site</name>
+			<name>BGP-TOPOLOGY-PROVIDER Module site</name>
 			<url>${basedir}/target/site/${project.artifactId}</url>
 		</site>
 	</distributionManagement>
