Initial code drop - bgp/pcep configuration.
Change-Id: I6dbfb94c364208fab5b95b82320419eab983942f
Signed-off-by: Milos Fabian <milfabia@cisco.com>

--- a/bgp/pom.xml
+++ b/bgp/pom.xml
@@ -30,5 +30,9 @@
         <module>rib-mock</module>
         <module>topology-provider</module>
         <module>util</module>
-    </modules>
+        <module>rib-api-config</module>
+        <module>update-api-config</module>
+        <module>update-mock-config</module>
+        <module>rib-impl-config</module>
+	</modules>
 </project>
