--- a/pcep/pom.xml
+++ b/pcep/pom.xml
@@ -23,6 +23,8 @@
         <module>testtool</module>
         <module>topology-api</module>
         <module>topology-provider</module>
+        <module>api-config</module>
+        <module>impl-config</module>
         <module>topology-spi</module>
         <module>tunnel-api</module>
         <module>tunnel-provider</module>
