--- a/bgp/linkstate/pom.xml
+++ b/bgp/linkstate/pom.xml
@@ -55,6 +55,11 @@
             <version>${project.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>bgp-rib-spi</artifactId>
+            <version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>${guava.version}</version>
