Added tests for bgp-rib-impl-config modules, fixed validations and RIBImplModule.
Change-Id: I8aa1e5eb2e67726d8131dbf95c280816145b3fca
Signed-off-by: Milos Fabian <milfabia@cisco.com>

--- a/bgp/rib-impl-config/pom.xml
+++ b/bgp/rib-impl-config/pom.xml
@@ -103,7 +103,18 @@
          <version>${controller.config.version}</version>
          <scope>test</scope>
       </dependency>
-      
+      <dependency>
+         <groupId>org.opendaylight.controller</groupId>
+         <artifactId>netty-threadgroup-config</artifactId>
+         <version>${controller.config.version}</version>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.opendaylight.controller</groupId>
+         <artifactId>sal-binding-broker-impl</artifactId>
+         <version>1.0-SNAPSHOT</version>
+         <scope>test</scope>
+      </dependency>     
    </dependencies>
 
    <build>
