Downgraded ODL controller config dependencies from 0.2.2-SNAPSHOT to 0.2.1-SNAPSHOT
Change-Id: I79c1b138b9885a4c28817b8ddbe2e54c9470e4db
Signed-off-by: Milos Fabian <milfabia@cisco.com>

--- a/bgp/update-mock-config/pom.xml
+++ b/bgp/update-mock-config/pom.xml
@@ -28,7 +28,7 @@
       <dependency>
          <groupId>org.opendaylight.controller</groupId>
          <artifactId>threadpool-config-api</artifactId>
-         <version>${controller.config.version}</version>
+         <version>0.2.2-SNAPSHOT</version>
       </dependency>
       <dependency>
          <groupId>${project.groupId}</groupId>
