--- a/bgp/pom.xml
+++ b/bgp/pom.xml
@@ -19,20 +19,23 @@
 	<modules>
 		<module>concepts</module>
 		<module>linkstate</module>
+		<module>linkstate-config</module>
         <module>parser-api</module>
         <module>parser-spi</module>
+        <module>parser-spi-config</module>
         <module>parser-impl</module>
         <module>parser-mock</module>
         <module>rib-api</module>
+        <module>rib-api-config</module>
         <module>rib-spi</module>
+        <module>rib-spi-config</module>
         <module>rib-impl</module>
+        <module>rib-impl-config</module>
         <module>testtool</module>
         <module>rib-mock</module>
         <module>topology-provider</module>
         <module>util</module>
-        <module>rib-api-config</module>
         <module>update-api-config</module>
         <module>update-mock-config</module>
-        <module>rib-impl-config</module>
 	</modules>
 </project>
