Add configuration for extensions
Change-Id: I55c089db790ada2260155e17cb35136a3baa8c80
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/pcep/pom.xml
+++ b/pcep/pom.xml
@@ -18,14 +18,15 @@
 	
 	<modules>
 		<module>api</module>
+        <module>api-config</module>
 		<module>impl</module>
+        <module>impl-config</module>
 		<module>spi</module>
+		<module>spi-config</module>
         <module>testtool</module>
         <module>topology-api</module>
-        <module>topology-provider</module>
-        <module>api-config</module>
-        <module>impl-config</module>
         <module>topology-spi</module>
+        <module>topology-provider</module>
         <module>tunnel-api</module>
         <module>tunnel-provider</module>
     </modules>
