Used netty Timer config + tests, fixed yang files and dependencies.
Change-Id: Id39cfaa134a71a6b6c0669cdb7dad4ded6e71b35
Signed-off-by: Milos Fabian <milfabia@cisco.com>

--- a/bgp/rib-impl-config/pom.xml
+++ b/bgp/rib-impl-config/pom.xml
@@ -67,7 +67,7 @@
       </dependency>
       <dependency>
          <groupId>org.opendaylight.controller</groupId>
-         <artifactId>threadpool-config-api</artifactId>
+         <artifactId>netty-config-api</artifactId>
          <version>${controller.config.version}</version>
       </dependency>
       
